# mobilellama

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
example/: demo.cc
src/data/: memory_manager.h  tensor.h
src/layers/: attention.cc  attention.h  base_layer.h  matmul.cc  matmul.h  mlp.cc  mlp.h  rmsnorm.cc  rmsnorm.h  sampler.cc  sampler.h  softmax.cc  softmax.h  transformer.cc  transformer.h
src/model/: model.h  model_config.h  model_weights.h  tokenizer.h
src/ops/: matmul.cc  matmul.h  rope.cc  rope.h  softmax.cc  softmax.h
src/processor/: processor.cc  processor.h
tests/: CMakeLists.txt
tests/data/: tensor_test.cc
tests/layers/: rmsnorm_test.cc
